--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -130,18 +130,21 @@
 }
 @media (max-width: 480px) {
     .sociallinks{
-        margin: 0;
+        margin: 0px 40px;
+        height: 7vh;
     }
     #footer{
         padding: 20px 50px;
-        margin-bottom: 75px;
-    }
-    .sociallinks a {
-        margin: 0 25px;
+        margin-bottom: 9vh;
     }
     .socialicon{
-        font-size: 30px;
-        padding: 10px;
+        font-size: 20px;
+        padding: 0px;
     }
-   
+    .sociallinks a {
+        padding: 11px;
+        background-color: none;
+        margin: 20px;
+        border-radius: 50%;
+    }
 }
