--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -83,7 +83,7 @@
     top: 90px;
     right: -800px;
     width: 50vw;
-    height: 84vh;
+    height: 90vh;
     background: rgb(27, 159, 27);
     padding: 40px;
     transition: right 0.5s ease-in-out;
@@ -129,7 +129,7 @@
     gap: 20px;
     justify-content: flex-start;
     position: fixed;
-    top: 10vh;
+    top: 7vh;
     right: -500px;
     /* Initially hide the navbar */
     width: 50vw;
@@ -152,17 +152,27 @@
 
 
   .navbarr {
-    padding: 16px 30px;
+    padding: 0px 30px;
     font-size: 14px;
     font-weight: 100;
   }
 
   #cname {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .navbarr {
-    height: 90px;
+    height: 7vh;
   }
 
+  #AC2{
+    background-color: #fff;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .navbar__logo img {
+    width: 30px;
+    height: auto;
+  }
 }
