--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -23,7 +23,7 @@
   /* Image styling */
   .card-img-top {
     width: 100%;
-    height: 50vh; /* Adjust the height as needed */
+    height: 35vh; /* Adjust the height as needed */
     object-fit: cover;
   }
   
@@ -33,6 +33,7 @@
     border-radius: 8px;
     margin: 10px;
     padding: 10px;
+    height: 27vh;
   }
   .cardbody h4{
     font-size: medium;
@@ -45,7 +46,7 @@
     font-size: 15px;
     margin-bottom: 0;
     padding-left: 20px;
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
   }
 
   .cardsection{
@@ -54,8 +55,20 @@
     align-items: center;
     gap: 40px;
   }
+  .servicecontent{
+    text-align: center;
+    margin: 0 60px;
+    padding: 10px;
+    border: 1px solid rgb(27, 159, 27, 0.3);
+  }
 
   @media (max-width: 768px) {
+    .servicecontent{
+      text-align: center;
+      margin: 0 30px;
+      padding: 10px;
+      border: 1px solid rgb(27, 159, 27, 0.3);
+    }
     .cardsection{
       gap: 10px;
       flex-wrap: wrap;
@@ -81,6 +94,11 @@
     .card{
       width: 80vw;
     }
-
+    .servicecontent{
+      text-align: center;
+      margin: 0 20px;
+      padding: 10px;
+      border: 1px solid rgb(27, 159, 27, 0.3);
+    }
   }
   
