--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -101,8 +101,9 @@
       border: 1px solid rgb(27, 159, 27, 0.3);
     }
     .servicecontent h5{
-      font-weight: 400;
-      line-height: 1.8rem;
+      font-weight: 200;
+      line-height: 1.5rem;
+      font-size: 18px;
     }
     .services{
       width: 90vw;
