--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -103,7 +103,9 @@
     margin-top: 10px;
     font-size: 16px;
   }
-  
+  #college{
+    margin-top: 25px;
+  }
  
 
   @media (max-width: 768px) {
@@ -162,13 +164,14 @@
       margin: 20px auto 0 auto;
     }
     .cards div{
-      width: 30vw;
+      width: 35vw;
     }
     .sercivcecards{
-      padding: 20px;
+      padding: 10px;
+
     }
     .cards{
-      gap: 5px;
+      gap: 10px;
     }
   }
   
